solution_standalone/service.yaml

apiVersion: v1
kind: Service
metadata:
 name: my-service
spec:
 selector:
   app: solution_standalone
 type: NodePort
 ports:
   - protocol: TCP
     port: 3001
     targetPort: 3000
     nodePort: 30390
