solution_standalone/service_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  type: NodePort
  selector:
    app: docker-blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: red-service
spec:
  type: NodePort
  selector:
    app: docker-red
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
