solution_standalone/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  rules:
  - host: blue.demo.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: blue-service
            port:
              number: 80
  - host: red.demo.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: red-service
            port:
              number: 80
